compiler/testData/diagnostics/tests/regressions/ea40964.kt
package checkFiles

import java.util.HashMap

fun main(args: Array<String>) {
    val hashMap = HashMap<String, String>()
    hashMap[<!SYNTAX!><!>]
}
